--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,8 @@
 SPDX-License-Identifier: CC0-1.0
-SPDX-FileCopyrightText: 2021 Alyssa Ross <hi@alyssa.is>
+SPDX-FileCopyrightText: 2021-2022 Alyssa Ross <hi@alyssa.is>
+
+• Add links to Hydra
+• Update dependencies
 
 pr-tracker 1.1.0 (2021-06-06)
 =============================
