templates/page.html: add missing space
Previously there was no space between the title and the closed
indicator.

--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,7 @@ SPDX-License-Identifier: CC0-1.0
 SPDX-FileCopyrightText: 2021-2022 Alyssa Ross <hi@alyssa.is>
 
 • Add links to Hydra
+• Add missing space before "(closed)" in PR title
 • Update dependencies
 
 pr-tracker 1.1.0 (2021-06-06)
