--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,8 @@
 SPDX-License-Identifier: CC0-1.0
 SPDX-FileCopyrightText: 2021-2023 Alyssa Ross <hi@alyssa.is>
 
+pr-tracker 1.3.0 (2023-10-28)
+
 • Add links to Hydra jobsets for development branches.
 • Add support for haskell-updates and python-updates.
 • Update dependencies
