--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,9 @@
 SPDX-License-Identifier: CC0-1.0
 SPDX-FileCopyrightText: 2021-2023 Alyssa Ross <hi@alyssa.is>
 
+• Add <meta name="viewport"> for better mobile display
+• Update dependencies
+
 pr-tracker 1.3.0 (2023-10-28)
 
 • Add links to Hydra jobsets for development branches.
